assets/css/header.css
header {
  display: flex;
  justify-content: center;
  flex-direction: column;
  background-image: linear-gradient(to top, #5ee7df 0%, #b490ca 100%);
  padding: 0px;
  grid-area: h;
}

.header-title {
  text-align: center;
  font-size: 60px;
  color: azure;
  font-family: "Wallpoet", sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (max-width: 799px) {
}

@media (max-width: 790px) {
  .header-title {
    font-size: 2rem;
  }
}
@media (min-width: 1200px) {
}

